syntax = "proto3";
package driver;

service DriverQuery {
  rpc FindNearbyDrivers (NearbyRequest) returns (NearbyResponse);
}

message NearbyRequest {
  double lat = 1;
  double lng = 2;
  double radiusKm = 3;
}

message DriverHit {
  string driverId = 1;
  double lat = 2;
  double lng = 3;
}

message NearbyResponse {
  repeated DriverHit drivers = 1;
}
